css/main.css
/* ... */
.nav-links li {
  margin: 0 15px;
}

.nav-links li a {
  color: white;
  font-size: 1.2em;
  padding: 10px 20px;
  display: block;
}
/*banner*/
.banner {
  width: 100%;
  height: 250px;
  background-color: #111111;
  display: flex;
  align-items: center;
  justify-content: flex-start;
  position: relative;
  overflow: visible;
  z-index: 1;
}

/*search bar*/
.search-container {
  display: flex;
  justify-content: center;
  margin-top: 75px;
  width: 100%;
  position: relative;
  z-index: 10;
  margin-left: 3%;
}

.search-result {
  display: none;
  position: absolute;
  z-index: 99;
  left: 50%;
  transform: translateX(-50%);
  width: 100%;
  max-width: 500px;
  background-color: none;
  box-shadow: 0 4px 10px rgba(0, 0, 0, 0.15);
}
.search-result ul {
  list-style: none;
  padding: 0;
  margin: 0;
  width: 73%;
}
.search-result li a {
  border: 1px solid #f0f0f0;
  background-color: #fff;
  padding: 1px;
  text-decoration: none;
  font-size: 12px;
  color: #201f1f;
  text-align: center;
  display: block;
  cursor: pointer;
}
.search-result li a:hover {
  background-color:#c4c3c3;
}

.bar {
  display: flex;
  align-items: center;
  border-radius: 8px;
  overflow: hidden;
  max-width: 500px;
  width: 100%;
}
#search-bar {
  width: auto;
  padding: 8px;
  border: 1px solid #ccc;
  border-right: none;
  border-radius: 4px 0 0 4px;
  outline: none;
}
.bar button {
  padding: 8px 12px;
  border: 1px solid #c4c3c3;
  border-left: none;
  border-radius: 0 4px 4px 0;
  background-color: #f0f0f0;
  cursor: pointer;
} 
/*smaller screens*/
@media (max-width: 667px) {
  .nav-links {
    display: none;
    position: absolute;
    bottom: 60px;
    left: 50%;
    transform: translateX(-50%);
    background-color: #201f1f;
    width: 80%;
    border-radius: 5px;
    text-align: center;
    padding: 10px 0;
  }
.category-list.show {
    display: block;
  }
  .nav-links.show {
    display: block;
    bottom: 0;
    z-index: 11;
    position: fixed;
  }

  .nav-links li {
    margin: 5px 3px;
    width: max-content;
  }
  .nav-links img {
    width: 30px;
    height: 25px;
  }
  .nav-links a {
    height: 10px;
  }
  .hamburger {
    display: block;
    position: fixed;
    bottom: 10px;
    left: 10px;
    font-size: 30px;
    z-index: 999;
    background-color: #793e98;
    border-radius: 8px;
    padding: 10px 15px;
  }
  .categories-button{
    margin-top: 20px;
    margin-left: 10px;
  }
  /*filter button*/
  .filter-toggle {
    display: block;
    position: fixed;
    bottom: 10px;
    left: 50%;
    transform: translateX(-50%);
    font-size: 30px;
    z-index: 998;
    background: #8220b3;
    color: #fff;
    padding: 10px 15px;
    border-radius: 8px;
    cursor: pointer;
  }
  #filter-container {
    display: none;
    position: fixed;
    bottom: 75px;
    left: 50%;
    transform: translateX(-50%);
    background-color: #201f1f;
    width: 80%;
    border-radius: 5px;
    text-align: center;
    padding: 30px 0 20px 0;
    color: #fff;
    z-index: 998;
    margin-top: 20px;
  }

  #filter-container.active {
    display: block;
  }

  #star-filter {
    display: flex;
    justify-content: center;
    gap: 15px;
    margin-bottom: 15px;
  }

  #star-filter span {
    font-size: 25px;
  }

  #date-filter {
    padding: 8px 12px;
    border-radius: 5px;
    border: none;
    font-size: 16px;
    margin-top: 20px;
  }

  .search-container {
    display: block;
    position: fixed;
    bottom: 10px;
    right: 10px;
    z-index: 9;
    width: 70%;
  }
  .search-result {
    left: 50%;
  }

  .all-ratings {
    display: flex;
    flex-direction: column;
    align-items: center;
    justify-content: center;
    margin-top: 20px;
    width: 90%;
    z-index: 10;
  }
  .about-container {
    display: flex;
    flex-direction: column;
    align-items: center;
    justify-content: center;
    margin-top: 50px;
    width: 90%;
    z-index: 10;
  }
  .movies-for-you-to-watch{
    display: none;
  text-decoration: none;}
  .categorys-line-homepage-big-screen{
    display: none;
  }
  .big-rate{
    margin: 10px
  }
  .movie-card img {
   margin: 5px;
   width: 200px;
   height: 200px;
   padding: 0;
  }

#movie-list {
  display: grid;
  grid-template-columns: repeat(4, 2fr);
  gap: 20px;
}
}

  /*categories button*/

  .categories-heading-main-page h2{
    text-align: center;
    font-family: helvetica-lt-pro, sans-serif;font-weight: 400;font-style: normal;
    margin-top: 100px;
  }

  .categories-row button {
    margin-top: 0px;
    background-color: #793e98;
    min-width: 160px;
    color: rgb(255, 255, 255);
    padding: 5px;
    border: none;
    cursor: pointer;
    border-radius: 5px;
    text-align: center;
    font-size: 12px;
    font-weight: bold;
  }
  
  .category-list {
    display: none;
    position: absolute;
    width: auto;
    margin-top: 0px;
    border-radius: 5px;
    padding-left: 15px;
    padding-right: 1px;
    list-style: none;
    z-index: 11;
  }
  
  .category-list li {
    padding: 2px 4px;
  }
  

  .category-list li a {
    text-decoration: none;
    color: #ffffff;
    font-size: small;
    text-align: center;
  }

  .category-list li:hover {
    background-color: #b652e3;
  }
  .categories {
    position: relative;
  }
/* ... */

